--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
 	url = git://github.com/scrooloose/nerdtree.git
+[submodule "bundle/vcscommand"]
+	path = bundle/vcscommand
+	url = git://github.com/vim-scripts/vcscommand.vim
