Re-added vcscommand

--- a/.gitmodules
+++ b/.gitmodules
@@ -27,4 +27,4 @@
 	url = git://github.com/scrooloose/nerdtree.git
 [submodule "bundle/vcscommand"]
 	path = bundle/vcscommand
-	url = git://github.com/vim-scripts/vcscommand.vim
+	url = git://github.com/vim-scripts/vcscommand.vim.git
