Added vim-surround plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "bundle/vcscommand"]
 	path = bundle/vcscommand
 	url = git://github.com/vim-scripts/vcscommand.vim.git
+[submodule "bundle/vim-surround"]
+	path = bundle/vim-surround
+	url = git://github.com/tpope/vim-surround.git
