--- a/.gitmodules
+++ b/.gitmodules
@@ -31,6 +31,6 @@
 [submodule "bundle/vim-surround"]
 	path = bundle/vim-surround
 	url = git://github.com/tpope/vim-surround.git
-[submodule "bundle/ropevim"]
-	path = bundle/ropevim
-	url = https://github.com/peplin/ropevim
+[submodule "bundle/python-mode"]
+	path = bundle/python-mode
+	url = git://github.com/klen/python-mode.git
