--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,6 @@
 	path = bundle/vim-flavored-markdown
 	url = git://github.com/jtratner/vim-flavored-markdown.git
 
+[submodule "bundle/jade"]
+	path = bundle/jade
+	url = https://github.com/digitaltoad/vim-jade
